content/source/assets/stylesheets/_docs.scss
#docs-sidebar {
  margin-bottom: 30px;
  margin-top: 20px;
  overflow: hidden;

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    margin-top: 10px;
    a {
        color: $body-link-color;
    }
  }

  %sidebar-link {
    color: $sidebar-link-color;
    font-size: $sidebar-font-size;
    overflow-wrap: break-word;
    margin: 0 0 0 15px;
    padding: 0 0 11px 0;

    &:focus,
    &:hover {
      background-color: transparent;
      color: $sidebar-link-color-hover;
    }
  }

  div#sidebar-controls {
    box-sizing: border-box;
    position: relative;
    .glyphicon-search {
      position: absolute;
      top: 7px;
      left: 7px;
      opacity: .7;
      z-index: -1;
    }
    input {
      font-size: 1rem;
      height: 100%;
      margin-bottom: 1px;
      padding-left: 28px;
      background: transparent;
      @media (pointer: coarse) {
        font-size: 16px;
      }
    }
    a.subnav-toggle {
      font-size: 1rem;
      padding: .2em 1.4em;
    }
  }

  ul.nav.docs-sidenav {
    display: block;
    padding-bottom: 15px;
    padding-top: 10px;

    li {
      a {
        @extend %sidebar-link;
      }

      &:before {
        color: $sidebar-link-color-active;
        content: '\2022';
        font-size: 1em;
        left: -3px;
        top: -3px;
        opacity: 0.4;
        position: absolute;
      }

      &.has-subnav {
        cursor: pointer;
        &:before {
          content: '\276F';
          transition: transform .1s linear;
        }
        &.active:before {
          transform: rotate(90deg);
          left: -1px;
          top: -1px;
        }
      }

      &.active {
        > a {
          color: $sidebar-link-color-active;
        }
        // Open nested navigations
        > ul.nav {
          display: block;
        }
        &:before {
          opacity: 1;
        }
      }

    }

    // subnav
    ul.nav-hidden {
      display: none;
    }
    ul.nav {
      padding: 10px;

      li {
        margin-left: 10px;
      }
    }
  }
}

